==> tomsalden/PCAP04/PlatformIO/PCAP04/lib/pcap04IIC/src/PCAP04IIC.cpp <==
#include "pcap04IIC.h"
#include "pcap_firmware.h"
#include "pcap_calibrations.h"
#include "pcap_configurations.h"

bool PCAP04IIC::test_connection()
{
  static bool testres = false;
  unsigned short recval = 0;
  Serial.print("I2C read test start, address: "); Serial.println(i2c_address);

  Wire.beginTransmission(i2c_address);
  Wire.write((test_read.opcode >> 8) & 0xFF);
  Wire.endTransmission(false);

  Wire.requestFrom((int)i2c_address,1);
  recval = Wire.read();

  if (recval == 0x11)
  {
    Serial.println("I2C read test:success");
    testres = true;
  }
  else
  {
    Serial.print("I2C read test:failed -> ");Serial.print(recval); Serial.println(" expected: 0x11");
    testres = false;
  }
  Serial.println("I2C read test end");
  
  return testres;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned int data)
{
  static unsigned char recval = 0;
  unsigned char sendData0 = (unsigned char)((data >> 16) & 0xFF);
  unsigned char sendData1 = (unsigned char)((data >> 8) & 0xFF);
  unsigned char sendData2 = (unsigned char)(data & 0xFF);
  // Serial.println("int ic2 transfer");
  // Serial.print("Raw data: "), Serial.println(data,BIN);
  // Serial.print("First data: ");Serial.println(sendData0,BIN);
  // Serial.print("Second data: ");Serial.println(sendData1,BIN);
  // Serial.print("Third data: ");Serial.println(sendData2,BIN);

  Wire.beginTransmission(i2c_address);
  Wire.write(sendData0);
  Wire.write(sendData1);
  if(sendData0 > 0x7f){ //If the MSB is a 1, then only transmit
    Wire.write(sendData2);
    Wire.endTransmission();
    delay(1);
    return recval;
  }
  
  //If the MSB is a 0, then receive as well, but don't send the last byte
  Wire.endTransmission(false);
  Wire.requestFrom((int)i2c_address,1);
  recval = Wire.read();
  delay(1);
  return recval;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned long data)
{
  static unsigned char recval = 0;
  unsigned char sendData0 = (unsigned char)((data >> 16) & 0xFF);
  unsigned char sendData1 = (unsigned char)((data >> 8) & 0xFF);
  unsigned char sendData2 = (unsigned char)(data & 0xFF);
  
  // Serial.println("long ic2 transfer");
  // Serial.print("Raw data: "), Serial.println(data,BIN);
  // Serial.print("First data: ");Serial.println(sendData0,BIN);
  // Serial.print("Second data: ");Serial.println(sendData1,BIN);
  // Serial.print("Third data: ");Serial.println(sendData2,BIN);

  Wire.beginTransmission(i2c_address);
  Wire.write(sendData0);
  Wire.write(sendData1);
  Wire.write(sendData2);
  Wire.endTransmission();
  // Serial.println("Data transmitted!");
  delay(1);
  return recval;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned short data)
{
  static unsigned short recval = 0;
  byte transmittedData[2];
  transmittedData[0] = data >> 8;
  transmittedData[1] = data & 0xFF;
  // Serial.println("short i2c transfer");
  // Serial.print("Data0: ");Serial.println(transmittedData[0],HEX);
  // Serial.print("Data1: ");Serial.println(transmittedData[1],HEX);

  Wire.beginTransmission(i2c_address);
  if (transmittedData[0] > 63){
    Wire.write(transmittedData[0]); //Reading result, only using the first byte
  }
  else{
    Wire.write(transmittedData,2);
  }
  Wire.endTransmission(false);
  Wire.requestFrom((int)i2c_address,1);
  recval = Wire.read();
  //Serial.print("Value received: "); Serial.println((unsigned char)(recval & 0xFF));
  delay(1);
  return (unsigned char)(recval & 0xFF);
}

unsigned char PCAP04IIC::i2c_transmit(unsigned char data)
{
  static unsigned char recval = 0;
  // Serial.println("unsigned char i2c transfer");
  // Serial.print("Data: ");Serial.println(data, BIN);


  Wire.beginTransmission(i2c_address);
  Wire.write(data);

  if(data > 0x7f){ //If the MSB is a 1, then only transmit
    Wire.endTransmission();
    delay(1);
    return recval;
  }

  //If the MSB is a 0, then also receive data
  Wire.endTransmission(false);
  Wire.requestFrom((int)i2c_address,1);
  recval = Wire.read();

  //Serial.print("Value received: "); Serial.println(recval,BIN);
  delay(1);
  return recval;
}

void PCAP04IIC::initialize()
{
  Serial.println();Serial.println("Initialising PCAP04...");
  
  delay(100);

  send_command(POR_RESET);

  Serial.println("Por has been reset");
  
  delay(100);

  write_config(47,0); // STOP DSP

  Serial.println("Config has been written");

  delay(100);

  readall_nvram();

  Serial.println("nvram has been read");

  // Serial.print("RUNBIT: on pcap nvram") ;Serial.println(pcap_nvram_mirror.CFG.CFG47.REGVAL,HEX);
  // Serial.print("RUNBIT: on teensy nvram") ;Serial.println(pcap_nvram.CFG.CFG47.REGVAL,HEX);  
  
  writeall_nvram();

  Serial.println("nvram has been written");
  
  validate_nvram();

  Serial.print("RUNBIT: on pcap nvram valid") ;Serial.println(pcap_nvram_mirror.CFG.CFG47.REGVAL,HEX);  

  send_command(INITIALIZE_OP);

  Serial.print("Initialize op has been sent");

  // send_command(CDC_START);
 
  initialized = true;

  delay(1000);
  
  Serial.println(); Serial.println("valid config"); Serial.println();
  
  print_config();

  Serial.println("pcap initialized");

}

void PCAP04IIC::print_nvram(){
  int s = 0;
  unsigned char* cfg_p;

  for (int i = 0; i < PCAP_NVRAM_SIZE; i++){
    delay(50);
    if (i < PCAP_NVRAM_MAX_INDEX_FW)
    {
      s = i;
      if (pcap_nvram.FW.data[s] <= 0x0F){ 
        Serial.print("0");Serial.print(pcap_nvram.FW.data[s],HEX);Serial.print(" ");
      }else{
        Serial.print(pcap_nvram.FW.data[s],HEX);Serial.print(" ");
      }

    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW && i < PCAP_NVRAM_MAX_INDEX_FW_CAL0)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL0;

      if (pcap_nvram.FW_CAL0.data[s] <= 0x0F){ 
        Serial.print("0");Serial.print(pcap_nvram.FW_CAL0.data[s],HEX);Serial.print(" ");
      }else{
        Serial.print(pcap_nvram.FW_CAL0.data[s],HEX);Serial.print(" ");
      }
    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW_CAL0 && i < PCAP_NVRAM_MAX_INDEX_FW_CAL1)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL0;

      if (pcap_nvram.FW_CAL1.data[s] <= 0x0F){ 
        Serial.print("0");Serial.print(pcap_nvram.FW_CAL1.data[s],HEX);Serial.print(" ");
      }else{
        Serial.print(pcap_nvram.FW_CAL1.data[s],HEX);Serial.print(" ");
      }
    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW_CAL1 && i < PCAP_NVRAM_SIZE)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL1;

      cfg_p = (unsigned char *)(&pcap_nvram.CFG.CFG0 + s);

      if (*cfg_p <= 0x0F){ 
        Serial.print("0");Serial.print(*cfg_p,HEX);Serial.print(" ");
      }
      else{
        Serial.print(*cfg_p, HEX); Serial.print(" ");
      }
    }
    if ((i+1)%16 == 0){
      Serial.print(i);
      Serial.println();
    }
  }
}

void PCAP04IIC::print_config(){
  int s = 0;
  int offset = 0;

  unsigned char* cfg_p = nullptr;
  uint32_t regval = 0x00;

  // Serial.println((long long)&pcap_nvram,HEX);
  // Serial.println((long long)&pcap_nvram.CFG,HEX);

  Serial.println("org ROM_ADD_CFG");

  for (uint32_t i = PCAP_NVRAM_MAX_INDEX_FW_CAL1; i < PCAP_NVRAM_SIZE; i++){
    delay(50);
    
    s = i - (PCAP_NVRAM_MAX_INDEX_FW_CAL1);

    cfg_p = (unsigned char *)(&pcap_nvram.CFG.CFG0 + s);

    regval = regval | *cfg_p << 8*offset;
    // Serial.print("i, s :");Serial.print(i);Serial.print(", ");Serial.println(s);
    // Serial.print("&pcap_nvram.CFG.CFG0 + s:");Serial.println((long long)(&pcap_nvram.CFG.CFG0 + s),HEX);

    if (*cfg_p <= 0x0F){ 
      Serial.print("0");Serial.print(*cfg_p,HEX);Serial.print(" ");
    }
    else{
      Serial.print(*cfg_p, HEX); Serial.print(" ");
    }
    offset++;
    if ((i+1)%4 == 0){
      Serial.print("equal4 ");
      char tmp[16];
      char format[128];
      sprintf(format, "0x%%.%dX", 8);
      sprintf(tmp, format, regval);
      Serial.print(tmp);
      Serial.print(" ");
      //Serial.print(regval,HEX);
      Serial.print(i);
      Serial.println();
      offset = 0;
      regval = 0;
    }
  }
}

void PCAP04IIC::validate_nvram(){

  static unsigned char* nvram_p;
  static unsigned char* nvram_mirror_p;

  readall_nvram();

  nvram_p = &pcap_nvram.FW.data[0];
  nvram_mirror_p = &pcap_nvram_mirror.FW.data[0];

  for (size_t addr = 0; addr < PCAP_NVRAM_SIZE; addr++)
  {
    //delay(50);

    //Serial.print("values (mcu, pcap) :(");Serial.print(*nvram_p); Serial.print(", ");Serial.print(*nvram_mirror_p);Serial.print(").");

    if (*nvram_p != *nvram_mirror_p){
      Serial.print("nvram different at address :");Serial.print(addr); 
      Serial.print(" with values (mcu, pcap) :(");Serial.print(*nvram_p); Serial.print(", ");Serial.print(*nvram_mirror_p);Serial.println(").");
      delay(100);
    }
    nvram_p++;
    nvram_mirror_p++;
  } 


}
