==> Lgmx666666/HITSZ-G314-project-capacitance-measurement-module/Software/v1.2-MAS-Unit/Core/Src/PCAP04IIC.cpp <==
#include "pcap04IIC.h"
#include "pcap_firmware.h"
#include "pcap_calibrations.h"
#include "pcap_configurations.h"
#define PCAP_DEBUG 0
#define PCAP_DOWNLOAD 1

bool PCAP04IIC::test_connection()
{
    static bool testres = false;
    uint8_t recval = 0;
    uint8_t sendcode;
    usb_printf("I2C read test start, address: 0x%x \r\n", i2c_address>>1);
//    Serial.print("I2C read test start, address: "); Serial.println(i2c_address);

/*** 用stm32实现
* beginTransmission：master拉低sda发起起始信号，先发i2c从设备地址（defalt）和读写位
 * write：等待ACK应答后，发送测试字节0x7e
 * endTransmission和requestFrom：根据datasheet，等待ACK应答后，只需主机重新拉低SDA发起起始信号，写入从设备地址和读命令，再读1byte即可，也可以结束通信后再次发起通信
 * 如果read byte == 1，则设备读写正常，其它情况参考手册
*/
    sendcode = (test_read.opcode >> 8) & 0xFF;
    if(HAL_OK == HAL_I2C_Master_Transmit(&hi2c1, i2c_address, &sendcode, 1, 0xffff)){
        HAL_I2C_Master_Receive(&hi2c1, i2c_address, &recval, 1, 0xffff);
    }

    if (recval == 0x11)
    {
        usb_printf("I2C read test:success read 0x%x\r\n", recval);
//    Serial.println("I2C read test:success");
        testres = true;
    }
    else
    {
        usb_printf("I2C read test:failed -> ");
        usb_printf(" %c ", recval);
        usb_printf("expected: 0x11\r\n");
//    Serial.print("I2C read test:failed -> ");Serial.print(recval); Serial.println(" expected: 0x11");
        testres = false;
    }
    usb_printf("I2C read test end\r\n");
//    Serial.println("I2C read test end");

    return testres;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned int data)
{
    static unsigned char recval = 0;
    uint8_t sendData0 = (uint8_t)((data >> 16) & 0xFF);
    uint8_t sendData1 = (uint8_t)((data >> 8) & 0xFF);
    uint8_t sendData2 = (uint8_t)(data & 0xFF);
    uint8_t array_senddata[3] = {sendData0, sendData1, sendData2};
  // Serial.println("int ic2 transfer");
  // Serial.print("Raw data: "), Serial.println(data,BIN);
  // Serial.print("First data: ");Serial.println(sendData0,BIN);
  // Serial.print("Second data: ");Serial.println(sendData1,BIN);
  // Serial.print("Third data: ");Serial.println(sendData2,BIN);
/*** stm32实现
 * beginTransmission：master拉低sda发起起始信号，先发i2c从设备地址（defalt）和读写位
 * write：写入对应字节，
 * endTransmission：结束通信
 */

    if(sendData0 > 0x7f){ //If the MSB is 1, then only transmit
        HAL_I2C_Master_Transmit(&hi2c1, i2c_address, (uint8_t*)array_senddata, 3, 0xffff);
        HAL_Delay(1);
        return recval;
    }
    else{
        HAL_I2C_Master_Transmit(&hi2c1, i2c_address, (uint8_t*)array_senddata, 2, 0xffff);
        HAL_I2C_Master_Receive(&hi2c1, i2c_address, &recval, 1, 0xffff);
    }
  
  //If the MSB is 0, then receive as well, but don't send the last byte
    HAL_Delay(1);
    return recval;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned long data)
{
    static unsigned char recval = 0;
    unsigned char sendData0 = (unsigned char)((data >> 16) & 0xFF);
    unsigned char sendData1 = (unsigned char)((data >> 8) & 0xFF);
    unsigned char sendData2 = (unsigned char)(data & 0xFF);
    uint8_t array_senddata[3] = {sendData0, sendData1, sendData2};
  
  // Serial.println("long ic2 transfer");
  // Serial.print("Raw data: "), Serial.println(data,BIN);
  // Serial.print("First data: ");Serial.println(sendData0,BIN);
  // Serial.print("Second data: ");Serial.println(sendData1,BIN);
  // Serial.print("Third data: ");Serial.println(sendData2,BIN);

    HAL_I2C_Master_Transmit(&hi2c1, i2c_address, (uint8_t*)array_senddata, 3, 0xffff);
//  Wire.beginTransmission(i2c_address);
//  Wire.write(sendData0);
//  Wire.write(sendData1);
//  Wire.write(sendData2);
//  Wire.endTransmission();
  // Serial.println("Data transmitted!");
    HAL_Delay(1);
    return recval;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned short data)
{
  static unsigned char recval = 0;
  uint8_t transmittedData[2];
  transmittedData[0] = data >> 8;
  transmittedData[1] = data & 0xFF;
  // Serial.println("short i2c transfer");
  // Serial.print("Data0: ");Serial.println(transmittedData[0],HEX);
  // Serial.print("Data1: ");Serial.println(transmittedData[1],HEX);

//  Wire.beginTransmission(i2c_address);
    if (transmittedData[0] > 63){
        HAL_I2C_Master_Transmit(&hi2c1, i2c_address, &transmittedData[0], 1, 0xffff);
    //    Wire.write(transmittedData[0]); //Reading result, only using the first byte
    }
    else{
        HAL_I2C_Master_Transmit(&hi2c1, i2c_address, (uint8_t *)transmittedData, 2, 0xffff);
    //    Wire.write(transmittedData,2);
    }
    //  Wire.endTransmission(false);
    //  Wire.requestFrom((int)i2c_address,1);
    HAL_I2C_Master_Receive(&hi2c1, i2c_address, &recval, 1, 0xffff);
//  recval = Wire.read();
  //Serial.print("Value received: "); Serial.println((unsigned char)(recval & 0xFF));
    HAL_Delay(1);
    return recval;
}

unsigned char PCAP04IIC::i2c_transmit(unsigned char data)
{
  static unsigned char recval = 0;
  // Serial.println("unsigned char i2c transfer");
  // Serial.print("Data: ");Serial.println(data, BIN);

    HAL_I2C_Master_Transmit(&hi2c1, i2c_address, &data, 1, 0xffff);
//  Wire.beginTransmission(i2c_address);
//  Wire.write(data);

    if(data > 0x7f){ //If the MSB is a 1, then only transmit
    //    Wire.endTransmission();
    //    delay(1);
        return recval;
    }
    HAL_I2C_Master_Receive(&hi2c1, i2c_address, &recval, 1, 0xffff);
  //If the MSB is a 0, then also receive data

//  Wire.endTransmission(false);
//  Wire.requestFrom((int)i2c_address,1);
//  recval = Wire.read();

  //Serial.print("Value received: "); Serial.println(recval,BIN);
    HAL_Delay(1);
    return recval;
}

void PCAP04IIC::initialize()
{
//  Serial.println();Serial.println("Initialising PCAP04...");
  
  HAL_Delay(100);

  send_command(POR_RESET);

    usb_printf("Por has been reset\r\n");
//  Serial.println("Por has been reset");
  
  HAL_Delay(100);

  write_config(47,0); // STOP DSP

    usb_printf("Config has been written \r\n");
//  Serial.println("Config has been written");

  HAL_Delay(100);

  readall_nvram();

    usb_printf("nvram has been read \r\n");
//  Serial.println("nvram has been read");

  // Serial.print("RUNBIT: on pcap nvram") ;Serial.println(pcap_nvram_mirror.CFG.CFG47.REGVAL,HEX);
  // Serial.print("RUNBIT: on teensy nvram") ;Serial.println(pcap_nvram.CFG.CFG47.REGVAL,HEX);  
  
  writeall_nvram();

    usb_printf("nvram has been written \r\n");
//  Serial.println("nvram has been written");
  
  validate_nvram();

    usb_printf("RUNBIT: on pcap nvram valid %c", pcap_nvram_mirror.CFG.CFG47.REGVAL);
//  Serial.print("RUNBIT: on pcap nvram valid") ;Serial.println(pcap_nvram_mirror.CFG.CFG47.REGVAL,HEX);

  send_command(INITIALIZE_OP);

    usb_printf("Initialize op has been sent \r\n");
//  Serial.print("Initialize op has been sent");

  // send_command(CDC_START);
 
  initialized = true;

  HAL_Delay(1000);

    usb_printf("valid config");
//  Serial.println(); Serial.println("valid config"); Serial.println();
  
  print_config();

    usb_printf("pcap initialized \r\n");
//  Serial.println("pcap initialized");

}

void PCAP04IIC::print_nvram(){
  int s = 0;
  unsigned char* cfg_p;

  for (int i = 0; i < PCAP_NVRAM_SIZE; i++){
    HAL_Delay(50);
    if (i < PCAP_NVRAM_MAX_INDEX_FW)
    {
      s = i;
      if (pcap_nvram.FW.data[s] <= 0x0F){
          usb_printf("0%c ", pcap_nvram.FW.data[s]);
//        Serial.print("0");Serial.print(pcap_nvram.FW.data[s],HEX);Serial.print(" ");
      }else{
          usb_printf("%c ", pcap_nvram.FW.data[s]);
//        Serial.print(pcap_nvram.FW.data[s],HEX);Serial.print(" ");
      }

    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW && i < PCAP_NVRAM_MAX_INDEX_FW_CAL0)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL0;

      if (pcap_nvram.FW_CAL0.data[s] <= 0x0F){
          usb_printf("0%c ", pcap_nvram.FW_CAL0.data[s]);
//        Serial.print("0");Serial.print(pcap_nvram.FW_CAL0.data[s],HEX);Serial.print(" ");
      }else{
          usb_printf("%c ", pcap_nvram.FW_CAL0.data[s]);
//        Serial.print(pcap_nvram.FW_CAL0.data[s],HEX);Serial.print(" ");
      }
    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW_CAL0 && i < PCAP_NVRAM_MAX_INDEX_FW_CAL1)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL0;

      if (pcap_nvram.FW_CAL1.data[s] <= 0x0F){
          usb_printf("0%c ", pcap_nvram.FW_CAL1.data[s]);
//        Serial.print("0");Serial.print(pcap_nvram.FW_CAL1.data[s],HEX);Serial.print(" ");
      }else{
          usb_printf("%c ", pcap_nvram.FW_CAL1.data[s]);
//        Serial.print(pcap_nvram.FW_CAL1.data[s],HEX);Serial.print(" ");
      }
    }
    else if (i >= PCAP_NVRAM_MAX_INDEX_FW_CAL1 && i < PCAP_NVRAM_SIZE)
    {
      s = i - PCAP_NVRAM_MAX_INDEX_FW_CAL1;

      cfg_p = (unsigned char *)(&pcap_nvram.CFG.CFG0 + s);

      if (*cfg_p <= 0x0F){
          usb_printf("0%c ", *cfg_p);
//        Serial.print("0");Serial.print(*cfg_p,HEX);Serial.print(" ");
      }
      else{
          usb_printf("%c ", *cfg_p);
//        Serial.print(*cfg_p, HEX); Serial.print(" ");
      }
    }
    if ((i+1)%16 == 0){
        usb_printf("%d\r\n", i);
//      Serial.print(i);
//      Serial.println();
    }
  }
}

void PCAP04IIC::print_config(){
  int s = 0;
  int offset = 0;

  unsigned char* cfg_p = nullptr;
  uint32_t regval = 0x00;

  // Serial.println((long long)&pcap_nvram,HEX);
  // Serial.println((long long)&pcap_nvram.CFG,HEX);

    usb_printf("org ROM_ADD_CFG\r\n");
//  Serial.println("org ROM_ADD_CFG");

  for (uint32_t i = PCAP_NVRAM_MAX_INDEX_FW_CAL1; i < PCAP_NVRAM_SIZE; i++){
    HAL_Delay(50);
    
    s = i - (PCAP_NVRAM_MAX_INDEX_FW_CAL1);

    cfg_p = (unsigned char *)(&pcap_nvram.CFG.CFG0 + s);

    regval = regval | *cfg_p << 8*offset;
    // Serial.print("i, s :");Serial.print(i);Serial.print(", ");Serial.println(s);
    // Serial.print("&pcap_nvram.CFG.CFG0 + s:");Serial.println((long long)(&pcap_nvram.CFG.CFG0 + s),HEX);

    if (*cfg_p <= 0x0F){
        usb_printf("0%x ", *cfg_p);
//      Serial.print("0");Serial.print(*cfg_p,HEX);Serial.print(" ");
    }
    else{
        usb_printf("%x ", *cfg_p);
//      Serial.print(*cfg_p, HEX); Serial.print(" ");
    }
    offset++;
    if ((i+1)%4 == 0){
        usb_printf("equal4 ");
//      Serial.print("equal4 ");
      char tmp[16];
      char format[128];
      sprintf(format, "0x%%.%dX", 8);
      sprintf(tmp, format, regval);
        usb_printf("%s %d\r\n", tmp, i);
//      Serial.print(tmp);
//      Serial.print(" ");
      //Serial.print(regval,HEX);
//      Serial.print(i);
//      Serial.println();
      offset = 0;
      regval = 0;
    }
  }
}

void PCAP04IIC::validate_nvram(){

  static unsigned char* nvram_p;
  static unsigned char* nvram_mirror_p;

  readall_nvram();

  nvram_p = &pcap_nvram.FW.data[0];
  nvram_mirror_p = &pcap_nvram_mirror.FW.data[0];

  for (size_t addr = 0; addr < PCAP_NVRAM_SIZE; addr++)
  {
    //delay(50);

    //Serial.print("values (mcu, pcap) :(");Serial.print(*nvram_p); Serial.print(", ");Serial.print(*nvram_mirror_p);Serial.print(").");

    if (*nvram_p != *nvram_mirror_p){
        usb_printf("nvram different at address : 0x%x with values (mcu, pcap) :(0x%x,0x%x).\r\n", addr, *nvram_p, *nvram_mirror_p);
//      Serial.print("nvram different at address :");Serial.print(addr);
//      Serial.print(" with values (mcu, pcap) :(");Serial.print(*nvram_p); Serial.print(", ");Serial.print(*nvram_mirror_p);Serial.println(").");
        HAL_Delay(100);
    }else{
        usb_printf("nvram different at address : 0x%x with values (mcu, pcap) :(0x%x,0x%x).\r\n", addr, *nvram_p, *nvram_mirror_p);
        HAL_Delay(100);
    }
    nvram_p++;
    nvram_mirror_p++;
  } 


}
